fix long file name  text-overflow

--- a/src/main/webapp/assets/common/css/gitbucket.css
+++ b/src/main/webapp/assets/common/css/gitbucket.css
@@ -831,6 +831,12 @@ table.table-file-list .content-name {
   max-width: 180px;
 }
 
+table.table-file-list .content-name .content-name-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 table.table-file-list .commit-message {
   max-width: 415px;
   display: inline-block;
